--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,7 @@ MarkupSafe==2.1.5
 multidict==6.1.0
 pydantic==2.9.2
 pydantic_core==2.23.4
+redis==5.1.1
 SQLAlchemy==2.0.35
 typing_extensions==4.12.2
 yarl==1.13.1
