--- a/requirements.txt
+++ b/requirements.txt
@@ -7,17 +7,30 @@ alembic==1.13.3
 annotated-types==0.7.0
 attrs==24.2.0
 certifi==2024.8.30
+et_xmlfile==2.0.0
 frozenlist==1.4.1
 greenlet==3.1.1
 idna==3.10
+lxml==5.3.0
 magic-filter==1.0.12
 Mako==1.3.5
 MarkupSafe==2.1.5
 multidict==6.1.0
+numpy==2.1.3
+openpyxl==3.1.5
+pandas==2.2.3
+pillow==11.0.0
 pydantic==2.9.2
 pydantic_core==2.23.4
+python-dateutil==2.9.0.post0
+python-docx==1.1.2
 python-dotenv==1.0.1
+python-pptx==1.0.2
+pytz==2024.2
 redis==5.1.1
+six==1.16.0
 SQLAlchemy==2.0.35
 typing_extensions==4.12.2
+tzdata==2024.2
+XlsxWriter==3.2.0
 yarl==1.13.1
